@@ -193,9 +193,11 @@ sub subroutine_table {
         my ($pkg, $subr) = ($subname =~ /^(.*::)(.*?)$/) ? ($1, $2) : ('', $subname);
         $sub_links .= sprintf qq{<td class="sub_pkg">%s</td>}, $pkg;
 
-        # remove own filename from eg __ANON__[(eval 3)[/long/path/name.pm:99]:53]
-        # XXX doesn't work right because $filestr isn't full filename
+        # remove OWN filename from eg __ANON__[(eval 3)[/long/path/name.pm:99]:53]
+        #                     becomes __ANON__[(eval 3)[:99]:53]
+        # XXX doesn't always work right because $filestr isn't full filename
         $subr =~ s/\Q$filestr\E:(\d+)/:$1/g;
+        # remove @INC prefix from other paths
         $subr =~ s/$inc_path_regex//;    # for __ANON__[/very/long/path...]
 
         my $first_line = $sub->first_line;
